# Dark-Souls-PvP-AI

./: .gitignore  Cargo.toml
src/: constants.rs  main.rs
src/ai/: NeuralNetwork.c  ai_decisions.rs  ai_methods.rs  animation_mappings.rs  character.rs  gui.rs  handler.rs  helper_util.rs  initalize_fann.rs  memory.rs  memory_edits.rs  mind_routines.rs  mod.rs  settings.rs  source.rs  sub_routines.rs  test_space.rs  vjoyhelper.rs  weapon_data.rs
src/fann/: activation_func.rs  cascade_params.rs  error.rs  error_func.rs  mod.rs  net_type.rs  stop_func.rs  train_data.rs
src/fann_sys/: mod.rs
