[package]
name = "Dark-Souls-PvP-AI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = { version = "0.2.150", features = ["use_std"] }
vjoy-sys = "0.4.1"
windows = { version = "0.52.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input"] }
rand = "0.8.5"
const_format = "0.2.32"
thread_local = "1.1.7"
float-cmp = "0.9.0"
unreachable = "1.0.0"
parking_lot = "0.12.1"
